log
Fri May  1 11:28:24 PM UTC 2026: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
9c513d8
Sat May  2 12:26:33 AM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:65:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   65 |         if(lower_than(key, aux->pair->key)){
      |            ^~~~~~~~~~
7eb4689
Sat May  2 12:27:22 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
bef9ca4
Sat May  2 03:53:15 AM UTC 2026: 
 treemap.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  0|0
858e4d5
Sat May  2 03:55:09 AM UTC 2026: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
6f2fe9e
Sat May  2 03:56:39 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/60
289c25c
Sun May  3 05:34:16 AM UTC 2026: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  17|4
total_score: 31/60
e701d72
Sun May  3 05:40:42 AM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:182:25: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  182 |     TreeNode * minimo = minimun(node->right);
      |                         ^~~~~~~
      |                         minimum
treemap.c:182:25: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
0741e39
Sun May  3 05:41:12 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/60
9a4050b
Sun May  3 04:17:55 PM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 40/60
2724136
Sun May  3 07:21:19 PM UTC 2026: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:221:5: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  221 |     key = aux->pair->key;
      |     ^~~
      |     key_t
treemap.c:221:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:222:5: error: ‘padre’ undeclared (first use in this function)
  222 |     padre = aux->parent;
      |     ^~~~~
treemap.c:228:1: error: control reaches end of non-void function [-Werror=return-type]
  228 | }
      | ^
cc1: all warnings being treated as errors
d54c48c
Sun May  3 07:23:23 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:223:33: error: ‘TreeNode’ has no member named ‘key’
  223 |     while(padre != NULL && padre->key < key){
      |                                 ^~
e2dc1c3
Sun May  3 07:24:03 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
71f1772
Sun May  3 07:26:49 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 43/60
3837ba6
Sun May  3 07:27:45 PM UTC 2026: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 50/60
f465c80
